# transfermarkt-scraper

./: .gitignore  Dockerfile  README.md  UNCAPTURED_FIELDS.md  competitions.json  confederations.json  environment.yml  pyproject.toml  requirements.txt  scrapy.cfg
.devcontainer/: devcontainer.json
.github/workflows/: build-checks.yml  dockerhub.yml  python-app.yml  scrapy-checks.yml
sample_site_maps/: ES1_athletic_bilbao_only.json  ES1_only.json  GB1_only.json
samples/: appearances.json  clubs.json  competitions.json  confederations.json  games.json  leagues.json  national_team_competitions.json  players.json  tournament_editions.json  transfers.json
tests/: conftest.py  test_crawlers.py
tfmkt/: __main__.py  cli.py  common.py  pipelines.py  settings.py  site_map.py  utils.py
tfmkt/crawlers/: appearances.py  clubs.py  competitions.py  confederations.py  countries.py  game_lineups.py  games.py  national_teams.py  players.py  tournament_editions.py  transfers.py
tfmkt/spiders/: appearances.py  auto.py  clubs.py  common.py  common_comp_club.py  competitions.py  confederations.py  game_lineups.py  games.py  leagues.py  players.py  spiders.py  transfers.py
