[tool.poetry]
name = "transfermarkt-scraper"
version = "0.4.0"
description = "Collects data from Transfermarkt website"
authors = ["dcaribou <davidcereijo@live.com>"]
packages = [{include = "tfmkt"}]

[tool.poetry.dependencies]
python = "^3.8"
inflection = "^0.5.1"
Protego = "^0.2.1"
python-dateutil = "^2.8.2"
scrapy = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
